test-cases/final-dump/backquote_hash.exp
Error detected during loading module: backquote_hash
final-dump/backquote_hash.wybe:1:5: Syntax error: unexpected hash character (#) in backquoted symbol
expecting simple expression
