test-cases/final-dump/backquote_hash.wybe
def `backquoted with # character` = 1
